force-app/main/default/objects/BrandRelationship__c/BrandRelationship__c.object-meta.xml
<CustomObject>
    <label>Brand Relationship</label>
    <nameField>
        <displayFormat>BR-{0000000000}</displayFormat>
        <label>Brand Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>