force-app/main/default/objects/BrandRelationship__c/fields/Birth_Hospital_Description__c.field-meta.xml
<CustomField>
    <fullName>Birth_Hospital_Description__c</fullName>
    <description>[13-Aug-21 Khai] Part of US-2955, To support the Trigger: Lookup to Institution&apos;s Description field and insert Description in Contact.Birth_Hospital</description>
    <label>Birth Hospital Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>