force-app/main/default/objects/BrandRelationship__c/fields/Brand_Usage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Brand_Usage_Reason__c</fullName>
    <label>Brand Usage Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>