force-app/main/default/objects/BrandRelationship__c/fields/BrandOptOut__c.field-meta.xml
<CustomField>
    <fullName>BrandOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Opt-Out</label>
    <type>Checkbox</type>
</CustomField>