force-app/main/default/objects/BrandRelationship__c/fields/BrandRelationshipType__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationshipType__c</fullName>
    <formula>TEXT(BrandRelationship__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Relationship Type</label>
    <type>Text</type>
</CustomField>