force-app/main/default/objects/BrandRelationship__c/fields/BrandSwitchChannel__c.field-meta.xml
<CustomField>
    <fullName>BrandSwitchChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Switch Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Brand Relationships (Brand Switch Channel)</relationshipLabel>
    <relationshipName>BrandSwitchChannels</relationshipName>
    <type>Lookup</type>
</CustomField>