force-app/main/default/objects/BrandRelationship__c/fields/BrandSwitchDate__c.field-meta.xml
<CustomField>
    <fullName>BrandSwitchDate__c</fullName>
    <label>Brand Switch Date</label>
    <type>DateTime</type>
</CustomField>