force-app/main/default/objects/BrandRelationship__c/fields/BrandSwitchReason__c.field-meta.xml
<CustomField>
    <fullName>BrandSwitchReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Switch Reason</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand Switch Reason</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Brand Relationships</relationshipLabel>
    <relationshipName>Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>