force-app/main/default/objects/BrandRelationship__c/fields/CansPerMonth__c.field-meta.xml
<CustomField>
    <fullName>CansPerMonth__c</fullName>
    <label>Cans per month (Ready-to-drink)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>