force-app/main/default/objects/BrandRelationship__c/fields/Care_giver_relation__c.field-meta.xml
<CustomField>
    <fullName>Care_giver_relation__c</fullName>
    <description>Indonesia Call Script</description>
    <label>Care giver relation?</label>
    <type>TextArea</type>
</CustomField>