force-app/main/default/objects/BrandRelationship__c/fields/CareGiver__c.field-meta.xml
<CustomField>
    <fullName>CareGiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Giver</label>
    <type>Checkbox</type>
</CustomField>