force-app/main/default/objects/BrandRelationship__c/fields/Channel_for_migrated_data__c.field-meta.xml
<CustomField>
    <fullName>Channel_for_migrated_data__c</fullName>
    <label>Channel (for migrated data)&apos;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>