force-app/main/default/objects/BrandRelationship__c/fields/ConsumingCompetitorBrand__c.field-meta.xml
<CustomField>
    <fullName>ConsumingCompetitorBrand__c</fullName>
    <formula>CurrentBrand__r.CompetitorProduct__c</formula>
    <label>Consuming Competitor Brand</label>
    <type>Checkbox</type>
</CustomField>