force-app/main/default/objects/BrandRelationship__c/fields/Current_Brand_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand_Rating__c</fullName>
    <label>Current Brand Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>