force-app/main/default/objects/BrandRelationship__c/fields/Current_Used_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Used_Product__c</fullName>
    <formula>TEXT(Survey_Campaign__r.Current_Used_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Used Product</label>
    <type>Text</type>
</CustomField>