force-app/main/default/objects/BrandRelationship__c/fields/DateFirstUsed__c.field-meta.xml
<CustomField>
    <fullName>DateFirstUsed__c</fullName>
    <label>Date First Used</label>
    <type>Date</type>
</CustomField>