force-app/main/default/objects/BrandRelationship__c/fields/Drop_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Drop_Out_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drop Out Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand Switch Reason</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Brand Relationships (Dropout Reason)</relationshipLabel>
    <relationshipName>Brand_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>