force-app/main/default/objects/BrandRelationship__c/fields/DropOutDate__c.field-meta.xml
<CustomField>
    <fullName>DropOutDate__c</fullName>
    <label>Drop Out Date</label>
    <type>Date</type>
</CustomField>