force-app/main/default/objects/BrandRelationship__c/fields/Dummy_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[1-Oct-21 Khai] Dummy checkbox to trigger the PB: Update BR.Birth_Hospital_Desc</description>
    <label>Dummy Checkbox</label>
    <type>Checkbox</type>
</CustomField>