force-app/main/default/objects/BrandRelationship__c/fields/DuplicateChecker__c.field-meta.xml
<CustomField>
    <fullName>DuplicateChecker__c</fullName>
    <label>Duplicate Checker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>