force-app/main/default/objects/BrandRelationship__c/fields/End_User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_First_Name__c</fullName>
    <formula>User__r.FirstName</formula>
    <label>End User First Name</label>
    <type>Text</type>
</CustomField>