force-app/main/default/objects/BrandRelationship__c/fields/End_User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Last_Name__c</fullName>
    <formula>User__r.LastName</formula>
    <label>End User Last Name</label>
    <type>Text</type>
</CustomField>