force-app/main/default/objects/BrandRelationship__c/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User</label>
    <type>Checkbox</type>
</CustomField>