force-app/main/default/objects/BrandRelationship__c/fields/ExternalBrandReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalBrandReference__c</fullName>
    <label>External Brand Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>