force-app/main/default/objects/BrandRelationship__c/fields/First_time_buying__c.field-meta.xml
<CustomField>
    <fullName>First_time_buying__c</fullName>
    <description>Indonesia Call Script</description>
    <label>First time buying?</label>
    <type>Date</type>
</CustomField>