force-app/main/default/objects/BrandRelationship__c/fields/FirstChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>FirstChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Channel Response</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Brand Relationships</relationshipLabel>
    <relationshipName>FirstChannelResponses</relationshipName>
    <type>Lookup</type>
</CustomField>