force-app/main/default/objects/BrandRelationship__c/fields/FSL_User__c.field-meta.xml
<CustomField>
    <fullName>FSL_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSL User</label>
    <type>Checkbox</type>
</CustomField>