force-app/main/default/objects/BrandRelationship__c/fields/GiftGiver__c.field-meta.xml
<CustomField>
    <fullName>GiftGiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Giver</label>
    <type>Checkbox</type>
</CustomField>