force-app/main/default/objects/BrandRelationship__c/fields/Have_tried_the_product_before__c.field-meta.xml
<CustomField>
    <fullName>Have_tried_the_product_before__c</fullName>
    <description>Indonesia Call Script</description>
    <label>Have tried the product before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>