force-app/main/default/objects/BrandRelationship__c/fields/Height_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Height_Percentile__c</fullName>
    <label>Height Percentile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>