force-app/main/default/objects/BrandRelationship__c/fields/Height_Status__c.field-meta.xml
<CustomField>
    <fullName>Height_Status__c</fullName>
    <label>Height Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>