force-app/main/default/objects/BrandRelationship__c/fields/IsProductBenefitsExplained__c.field-meta.xml
<CustomField>
    <fullName>IsProductBenefitsExplained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Benefits Explained?</label>
    <type>Checkbox</type>
</CustomField>