force-app/main/default/objects/BrandRelationship__c/fields/KeyBrand__c.field-meta.xml
<CustomField>
    <fullName>KeyBrand__c</fullName>
    <formula>TEXT(BrandRelationship__r.KeyBrand__c)</formula>
    <label>Key Brand</label>
    <type>Text</type>
</CustomField>