force-app/main/default/objects/BrandRelationship__c/fields/KeyBrandofCurrentBranduse__c.field-meta.xml
<CustomField>
    <fullName>KeyBrandofCurrentBranduse__c</fullName>
    <formula>TEXT(CurrentBrand__r.KeyBrand__c)</formula>
    <label>Key Brand of Current Brand use</label>
    <type>Text</type>
</CustomField>