force-app/main/default/objects/BrandRelationship__c/fields/KeyMessageDriverforTrial__c.field-meta.xml
<CustomField>
    <fullName>KeyMessageDriverforTrial__c</fullName>
    <label>Key Message Driver for Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>