force-app/main/default/objects/BrandRelationship__c/fields/LatestCampaign__c.field-meta.xml
<CustomField>
    <fullName>LatestCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Brand Relationships</relationshipLabel>
    <relationshipName>Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>