force-app/main/default/objects/BrandRelationship__c/fields/LatestChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>LatestChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Channel Response</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Brand Relationships (Latest Channel Response)</relationshipLabel>
    <relationshipName>LatestChannelResponses</relationshipName>
    <type>Lookup</type>
</CustomField>