force-app/main/default/objects/BrandRelationship__c/fields/LatestChannelResponseDate__c.field-meta.xml
<CustomField>
    <fullName>LatestChannelResponseDate__c</fullName>
    <label>Latest Channel Response Date</label>
    <type>DateTime</type>
</CustomField>