force-app/main/default/objects/BrandRelationship__c/fields/LatestMilestone__c.field-meta.xml
<CustomField>
    <fullName>LatestMilestone__c</fullName>
    <label>Latest Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>