force-app/main/default/objects/BrandRelationship__c/fields/LatestRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>LatestRegistrationDate__c</fullName>
    <label>Latest Registration Date</label>
    <type>Date</type>
</CustomField>