force-app/main/default/objects/BrandRelationship__c/fields/LatestTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>LatestTransactionDate__c</fullName>
    <label>Latest Transaction Date</label>
    <type>Date</type>
</CustomField>