force-app/main/default/objects/BrandRelationship__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Lead Status based on Scoring</description>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>Existing Lead</fullName>
            </value>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>Retained User</fullName>
            </value>
            <value>
                <fullName>Lapsed User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>