force-app/main/default/objects/BrandRelationship__c/fields/LeadScoreAddressObj__c.field-meta.xml
<CustomField>
    <fullName>LeadScoreAddressObj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Score Address Obj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>