force-app/main/default/objects/BrandRelationship__c/fields/LeadScoreBRObj__c.field-meta.xml
<CustomField>
    <fullName>LeadScoreBRObj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Score BR Obj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>