force-app/main/default/objects/BrandRelationship__c/fields/LeadScoreCRObj__c.field-meta.xml
<CustomField>
    <fullName>LeadScoreCRObj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Score CR Obj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>