force-app/main/default/objects/BrandRelationship__c/fields/LeadScoreEDMObj__c.field-meta.xml
<CustomField>
    <fullName>LeadScoreEDMObj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Score EDM Obj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>