force-app/main/default/objects/BrandRelationship__c/fields/Loyalty_Length_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Length_in_Months__c</fullName>
    <formula>MONTH(LatestTransactionDate__c) + (12*(YEAR(LatestTransactionDate__c)-YEAR(FirstTransactionDate__c))) - MONTH(FirstTransactionDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Length (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>