force-app/main/default/objects/BrandRelationship__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>PrimaryContact__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market</label>
    <type>Text</type>
</CustomField>