force-app/main/default/objects/BrandRelationship__c/fields/MC_Sync_Eligibility_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Eligibility_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync Eligibility ID</label>
    <type>Checkbox</type>
</CustomField>