force-app/main/default/objects/BrandRelationship__c/fields/MC_TH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_TH_Sync_Eligibility__c</fullName>
    <formula>AND( PrimaryContact__c != null , PrimaryContact__r.MC_TH_Sync_Eligibility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC TH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>