force-app/main/default/objects/BrandRelationship__c/fields/Medical_Nutrition_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Nutrition_Created_Date__c</fullName>
    <label>Medical Nutrition Created Date</label>
    <type>Date</type>
</CustomField>