force-app/main/default/objects/BrandRelationship__c/fields/MilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>MilestoneStatus__c</fullName>
    <label>Milestone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>