force-app/main/default/objects/BrandRelationship__c/fields/MilkWaterMixturePercentage__c.field-meta.xml
<CustomField>
    <fullName>MilkWaterMixturePercentage__c</fullName>
    <label>Milk/Water Mixture Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>