force-app/main/default/objects/BrandRelationship__c/fields/NewtoBrand__c.field-meta.xml
<CustomField>
    <fullName>NewtoBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New to Brand</label>
    <type>Checkbox</type>
</CustomField>