force-app/main/default/objects/BrandRelationship__c/fields/NewtoBrandDate__c.field-meta.xml
<CustomField>
    <fullName>NewtoBrandDate__c</fullName>
    <label>New to Brand Date</label>
    <type>Date</type>
</CustomField>