force-app/main/default/objects/BrandRelationship__c/fields/Noofpacks__c.field-meta.xml
<CustomField>
    <fullName>Noofpacks__c</fullName>
    <label>Noofpacks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>