force-app/main/default/objects/BrandRelationship__c/fields/NumberOfMonths__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMonths__c</fullName>
    <formula>(YEAR( TODAY()  )*12+MONTH(TODAY() ))-
(YEAR(  DateFirstUsed__c )*12+MONTH( DateFirstUsed__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Months Since Date First Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>