force-app/main/default/objects/BrandRelationship__c/fields/Preferred_Flavours__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Flavours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Flavour</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Brand Relationships</relationshipLabel>
    <relationshipName>Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>