force-app/main/default/objects/BrandRelationship__c/fields/Preferred_Formula__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Formula__c</fullName>
    <formula>TEXT(Survey_Campaign__r.Preferred_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Formula</label>
    <type>Text</type>
</CustomField>