force-app/main/default/objects/BrandRelationship__c/fields/Preferred_Product__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Product__c</fullName>
    <label>PreferredProduct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensure</fullName>
                <label>อาหารสูตรครบถ้วน</label>
            </value>
            <value>
                <fullName>Glucerna SR</fullName>
                <label>อาหารทดแทนสำหรับผู้ป่วยเบาหวาน</label>
            </value>
            <value>
                <fullName>Nepro HP</fullName>
                <label>อาหารสูตรสำหรับผู้ป่วยล้างไต</label>
            </value>
            <value>
                <fullName>Prosure</fullName>
                <label>อาหารสูตรครบถ้วนให้โปรตีนและอีพีเอสูง สำหรับผู้ป่วยที่มีปัญหาน้ำหนักตัวลดลง</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>ไม่มี</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>